--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ async-timeout==4.0.3
 attrs==23.1.0
 audioread==3.0.1
 backcall==0.2.0
+bcc==0.18.0
 blinker==1.4
 Brlapi==0.8.3
 certifi==2020.6.20
@@ -153,6 +154,7 @@ sacrebleu==2.3.1
 sacremoses==0.0.53
 scikit-learn==1.3.2
 scipy==1.11.3
+seamless-communication @ file:///home/xhk/Documents/iep-poc/seamless_communication
 SecretStorage==3.3.1
 sentencepiece==0.1.99
 sessioninstaller==0.0.0
